Fix visibility for brower-default selects

--- a/sass/components/forms/_select.scss
+++ b/sass/components/forms/_select.scss
@@ -15,7 +15,7 @@ select {
 
 
 .input-field {
-  select {
+  select:not(.browser-default) {
     display: block;
     position: absolute;
     width: 0;
